set(CURSOR_INSTALL_DIR ${ICON_INSTALL_DIR})

install(DIRECTORY Oxygen_Blue DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Blue_Big DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_White DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_White_Big DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Yellow DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Yellow_Big DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Zion DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Zion_Big DESTINATION ${CURSOR_INSTALL_DIR} PATTERN .svn EXCLUDE)

