install(DIRECTORY Oxygen_Blue DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Blue_Big DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_White DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_White_Big DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Yellow DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Yellow_Big DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Zion DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

install(DIRECTORY Oxygen_Zion_Big DESTINATION ${ICON_INSTALL_DIR} PATTERN .svn EXCLUDE)

