add_subdirectory(kdm)
add_subdirectory(klipper)
add_subdirectory(kfontview)
add_subdirectory(kmenuedit)
add_subdirectory(ksysguard)
add_subdirectory(plasma-desktop)
add_subdirectory(kcontrol)
add_subdirectory(systemsettings)
add_subdirectory(kinfocenter)
if(POLKITQT_FOUND)
  add_subdirectory(PolicyKit-kde)
endif(POLKITQT_FOUND)
